# claude-orchestra

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/claude_orchestra/: __init__.py  __main__.py  config.py  logging_config.py  patterns.py  wrapper.py
src/claude_orchestra/session/: __init__.py  manager.py  models.py
src/claude_orchestra/tmux/: __init__.py  controller.py
src/claude_orchestra/tui/: __init__.py  app.py
src/claude_orchestra/tui/screens/: __init__.py  dashboard.py  session.py
src/claude_orchestra/tui/widgets/: __init__.py  session_row.py
tests/: __init__.py  test_patterns.py  test_session_manager.py  test_tmux_controller.py
