[project]
name = "claude-orchestra"
version = "0.1.0"
description = "TUI for orchestrating multiple Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "libtmux>=0.37.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-orchestra = "claude_orchestra.__main__:main"
cc-wrapper = "claude_orchestra.wrapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_orchestra"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
